--- a/projects/overlay-loader/src/lib/loader.component.scss
+++ b/projects/overlay-loader/src/lib/loader.component.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   opacity: 1;
@@ -20,7 +21,9 @@
   border-radius: 50%;
   animation: loading 0.75s ease infinite;
 }
-
+.loader-message{
+  margin-top: 150px;
+}
 @keyframes loading {
   from {
     transform: rotate(0turn);
